cases/fiasco_17_10/misc/build_error_investigations/with_errors/3/processed/494.config.out
  ... Making jdb_trace.o
  ... Making __main.o
  ... Making mem_op.o
  ... Making mem_op-arm-32.o
  ... Making kmem_space.o
  ... Making kmem_space-arm-32.o
  ... Making boot_uart_init.o
  ... Making irq_chip_generic.o
  ... Making outer_cache.o
  ... Making outer_cache-l2cxx0.o
  ... Making utcb_support.o
  ... Making utcb_support-arm.o
  ... Making cascade_irq.o
  ... Making irq_mgr_multi_chip.o
  ... Making boot_infos.o
  ... Making jdb_gzip.o
  ... Making generic_timer.o
  ... Making arm_control-arm-bcm283x.o
  ... Making irq_handler-arm-bcm283x.o
  ... Making kern_lib_page.o
  ... Making vgic.o
In file included from auto/vgic.cc:4:0:
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/arm/vgic.cpp: In constructor ‘Gic_h_init::Gic_h_init(Cpu_number)’:
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/arm/vgic.cpp:153:47: error: ‘Gic_h_phys_base’ is not a member of ‘Mem_layout’
         Gic_h::gic.construct(Kmem::mmio_remap(Mem_layout::Gic_h_phys_base));
                                               ^
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makerules.global:118: recipe for target 'vgic.o' failed
make[2]: *** [vgic.o] Error 1
make[2]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makefile:153: recipe for target 'all' failed
make[1]: *** [all] Error 2
make[1]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
Makefile:72: recipe for target 'build' failed
make: *** [build] Error 2

return code 2
